# puffinv2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  fly.toml  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agent/: loop.py  mcp.py  prompts.py  tools.py
app/: main.py  scheduler.py  telegram.py
app/static/: index.html
db/: crud.py  database.py  models.py
db/migrations/: 001_initial.py  002_add_ingredient_notes.py  003_meal_ingredient_nullable_fk.py  004_fresh_and_subcategory.py  005_meal_plan.py  006_meal_type.py  007_recipes.py  008_recurring_deliveries.py
macrofactor-mcp/: Dockerfile  fly.toml  referer-patch.mjs
nutrition/: lookup.py
sources/: base.py  camera.py  manual.py  meat_box.py  registry.py  veg_box.py  web_scraper.py
tests/: conftest.py  test_api.py  test_crud.py  test_mcp.py  test_nutrition.py  test_sources.py  test_tools.py
